<resources xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name" translatable="false">DOGGY GUIDE</string>
    <string name="dogs_A" translatable="false">DOGS A</string>
    <string name="dogName1" translatable="false">AFFENPINSCHER</string>
    <string name="dogName2" translatable="false">AFGHANISCHER WINDHUND</string>
    <string name="dogName3" translatable="false">AIREDALE TERRIER</string>
    <string name="dogName4" translatable="false">AKITA INA</string>
    <string name="dogName5" translatable="false">ALASKAN HUSKY</string>
    <string name="dogName6" translatable="false">ALASKAN MALAMUTE</string>
    <string name="dogName7" translatable="false">ALOPEKIS</string>
    <string name="dogName8" translatable="false">ALTDEUTSCHER SCHÄFERHUND</string>
    <string name="dogName9" translatable="false">AMERICAN AKITA</string>
    <string name="dogName10" translatable="false">AMERICAN BULLDOG</string>
    <string name="dogName11" translatable="false">AMERICAN BULLY</string>
    <string name="dogName12" translatable="false">AMERICAN COCKER SPANIEL</string>
    <string name="dogName13" translatable="false">AMERICAN FOXHOUND</string>
    <string name="dogName14" translatable="false">AMERICAN PIT BULL TERRIER</string>
    <string name="dogName15" translatable="false">AMERICAN STAFFORDSHIRE TERRIER</string>
    <string name="dogName16" translatable="false">AMERICAN WATER SPANIEL</string>
    <string name="dogName17" translatable="false">ANATOLISCHER HIRTENHUND</string>
    <string name="dogName18" translatable="false">APPENZELLER SENNENHUND</string>
    <string name="dogName19" translatable="false">AUSTRALIAN CATTLE</string>
    <string name="dogName22" translatable="false">AUSTRALIAN KELPIE</string>
    <string name="dogName23" translatable="false">AUSTRALIAN SHEPHERD</string>
    <string name="dogName24" translatable="false">AUSTRALIAN STUMPY TAIL CATTLE DOG</string>
    <string name="dogName25" translatable="false">AUSTRALIAN TERRIER</string>
    <string name="dogName26" translatable="false">AZAWAKH</string>
    <string name="dogs_B" translatable="false">DOGS B</string>
    <string name="dogName27" translatable="false">BANDOG BULLMASTIFF</string>
    <string name="dogName28" translatable="false">BARBET</string>
    <string name="dogName29" translatable="false">BARSOI</string>
    <string name="dogName30" translatable="false">BASENJI</string>
    <string name="dogName31" translatable="false">BASSET HOUND</string>
    <string name="dogName32" translatable="false">BAYRISCHER GEBIRGSSCHWEISSHUND</string>
    <string name="dogName33" translatable="false">BEAGLE</string>
    <string name="dogName34" translatable="false">BEARDED COLLIE</string>
    <string name="dogName35" translatable="false">BEAUCERON</string>
    <string name="dogName36" translatable="false">BEDLINGTON TERRIER</string>
    <string name="dogName37" translatable="false">BELGISCHER SCHÄFERHUND (MALINOIS)</string>
    <string name="dogName38" translatable="false">BERGAMASKER HIRTENHUND</string>
    <string name="dogName39" translatable="false">BERGER BLANC SUISSE</string>
    <string name="dogName40" translatable="false">BERGER PICARD</string>
    <string name="dogName41" translatable="false">BERNEDOODLE</string>
    <string name="dogName42" translatable="false">BERNER SENNENHUND</string>
    <string name="dogName43" translatable="false">BERNHARDINER (ST.BERNHARDSHUND)</string>
    <string name="dogName44" translatable="false">BISCHON FRISÉ</string>
    <string name="dogName45" translatable="false">BLACK AND TAN COONHOUND</string>
    <string name="dogName46" translatable="false">BLOODHOUND</string>
    <string name="dogName47" translatable="false">BOBTAIL (OLD ENGLISH SHEEPDOG)</string>
    <string name="dogName48" translatable="false">BOERBOEL</string>
    <string name="dogName49" translatable="false">BOLOGNESER</string>
    <string name="dogName50" translatable="false">BOLONKA ZWETNA</string>
    <string name="dogName51" translatable="false">BORDEUX DOGGE</string>
    <string name="dogName52" translatable="false">BORDER COLLIE</string>
    <string name="dogName53" translatable="false">BORDER TERRIER</string>
    <string name="dogName54" translatable="false">BOSTON TERRIER</string>
    <string name="dogName55" translatable="false">BRIARD</string>
    <string name="dogName56" translatable="false">BROHOLMER</string>
    <string name="dogName57" translatable="false">BULLMASTIFF</string>
    <string name="dogName58" translatable="false">BULLTERRIER</string>
    <string name="dogs_C" translatable="false">DOGS C</string>
    <string name="dogName59" translatable="false">CA DE BOU</string>
    <string name="dogName60" translatable="false">CAIRN TERRIER</string>
    <string name="dogName61" translatable="false">CANE CORSO</string>
    <string name="dogName62" translatable="false">KAVALIER KING CHARLES SPANIEL</string>
    <string name="dogName63" translatable="false">CAVAPOO</string>
    <string name="dogName64" translatable="false">CHESAPEAKE BAY RETRIEVER</string>
    <string name="dogName65" translatable="false">CHIHUAHUA</string>
    <string name="dogName66" translatable="false">CHINESISCHER SCHOPFHUND</string>
    <string name="dogName67" translatable="false">CHOW CHOW</string>
    <string name="dogName68" translatable="false">CIOBÁNESC ROMÁNESC MIORITIC</string>
    <string name="dogName69" translatable="false">CLUMBER SPANIEL</string>
    <string name="dogName70" translatable="false">COCKAPOO</string>
    <string name="dogName71" translatable="false">COTON DE TULÉAR</string>
    <string name="dogName72" translatable="false">COLLIE (KURZHAAR)</string>
    <string name="dogName73" translatable="false">CURLY COATED RETRIEVER</string>
    <string name="dogs_D" translatable="false">DOGS D</string>
    <string name="dogName74" translatable="false">DACKEL</string>
    <string name="dogName75" translatable="false">DALMATINER</string>
    <string name="dogName76" translatable="false">DEERHOUND</string>
    <string name="dogName77" translatable="false">DEUTSCHE DOGGE</string>
    <string name="dogName78" translatable="false">DEUTSCHER BOXER</string>
    <string name="dogName79" translatable="false">DEUTSCHER DRAHTHAAR</string>
    <string name="dogName80" translatable="false">DEUTSCHER KURZHAAR</string>
    <string name="dogName81" translatable="false">DEUTSCHER LANGHAAR</string>
    <string name="dogName82" translatable="false">DEUTSCHER PINSCHER</string>
    <string name="dogName83" translatable="false">DEUTSCHER SCHÄFERHUND</string>
    <string name="dogName84" translatable="false">DEUTSCHER WACHTELHUND</string>
    <string name="dogName85" translatable="false">DOBERMANN</string>
    <string name="dogName86" translatable="false">DOGO ARGENTINO</string>
    <string name="dogName87" translatable="false">DRAHTHAAR FOX TERRIER</string>
    <string name="dogs_E_É" translatable="false">DOGS E/É</string>
    <string name="dogName88" translatable="false">ELO</string>
    <string name="dogName89" translatable="false">ENGLISCHE BULLDOGGE</string>
    <string name="dogName90" translatable="false">ENGLISH COCKER SPANIEL</string>
    <string name="dogName91" translatable="false">ENGLISH FOXHOUND</string>
    <string name="dogName92" translatable="false">ENGLISH MASTIFF</string>
    <string name="dogName93" translatable="false">ENGLISH POINTER</string>
    <string name="dogName94" translatable="false">ENGLISH SETTER</string>
    <string name="dogName95" translatable="false">ENGLISH SPRINGER SPANIEL</string>
    <string name="dogName96" translatable="false">ENTLEBUCHER SENNENHUND</string>
    <string name="dogName97" translatable="false">EURASIER</string>
    <string name="dogName98" translatable="false">ÉPAGNEUL BRETON</string>
    <string name="dogName99" translatable="false">ÉPAGNEUL FRANCAIS</string>
    <string name="dogName100" translatable="false">ÉPAGNEUL PICARD</string>
    <string name="dogs_F" translatable="false">DOGS F</string>
    <string name="dogName101" translatable="false">FIELD SPANIEL</string>
    <string name="dogName102" translatable="false">FILA BRASILERIO</string>
    <string name="dogName103" translatable="false">FINNEN SPITZ</string>
    <string name="dogName104" translatable="false">FINNISCHER LAPPHUND</string>
    <string name="dogName105" translatable="false">FLAT COATED RETRIEVER</string>
    <string name="dogName106" translatable="false">FRANZÖSISCHE BULLDOGGE</string>
    <string name="dogs_G" translatable="false">DOGS G</string>
    <string name="dogName107" translatable="false">GALGO ESPANOL</string>
    <string name="dogName108" translatable="false">GLATTHAAR FOX TERRIER</string>
    <string name="dogName109" translatable="false">GOLDEN DOODLE</string>
    <string name="dogName110" translatable="false">GOLDEN RETRIEVER</string>
    <string name="dogName111" translatable="false">GORDON SETTER</string>
    <string name="dogName112" translatable="false">GRAND GRIFFIN VENDEÉN</string>
    <string name="dogName113" translatable="false">GREYHOUND</string>
    <string name="dogName114" translatable="false">GRÖNLANDHUND</string>
    <string name="dogName115" translatable="false">GROSSER MÜNSTERLÄNDER</string>
    <string name="dogName116" translatable="false">GROSSER SCHWEIZER SENNENHUND</string>
    <string name="dogName117" translatable="false">GROßSPITZ</string>
    <string name="dogName118" translatable="false">HARZER FUCHS</string>
    <string name="dogName119" translatable="false">HAVANESER</string>
    <string name="dogName120" translatable="false">HOKKAIDO</string>
    <string name="dogName121" translatable="false">HOLLÄNDISCHER SCHÄFERHUND</string>
    <string name="dogName122" translatable="false">HOVAWART</string>
    <string name="dogs_I" translatable="false">DOGS I</string>
    <string name="dogName123" translatable="false">IRISCHER WOLFSHUND</string>
    <string name="dogName124" translatable="false">IRISH SETTER</string>
    <string name="dogName125" translatable="false">IRISH SOFT COATED WHEATEN TERRIER</string>
    <string name="dogName126" translatable="false">IRISH TERRIER</string>
    <string name="dogName127" translatable="false">IRISH WATER SPANIEL</string>
    <string name="dogName128" translatable="false">ISLANDHUND</string>
    <string name="dogName129" translatable="false"> ITALIAN GREYHOUND(ITALIENISCHER WINDHUND)</string>
    <string name="dogs_J" translatable="false">DOGS J</string>
    <string name="dogName130" translatable="false">JACK RUSSEL TERRIER</string>
    <string name="dogName131" translatable="false">JÄMTHUND</string>
    <string name="dogName132" translatable="false">JAPAN CHIN</string>
    <string name="dogName133" translatable="false">JAPAN SPITZ</string>
    <string name="dogName182" translatable="false">PEKINGESE</string>
    <string name="my_perfect_dog" translatable="false">My Perfect Dog</string>
    <string name="die_vielfalt_der_hunderassen_ist_gross_jede_einzelne_zeichnet_sich_durch_ihr_besonderes_aussehen_einen_individuellen_charakter_und_spezielle_beduerfnisse_aus_bevor_sie_in_die_riesige_welt_der_hunderassen_eintauchen_erfahren_sie_hier_mehr_ueber_ihre_besonderheiten_und_entstehung" translatable="false">
        Die Vielfalt der Hunderassen ist groß. Jede einzelne zeichnet sich durch ihr besonderes Aussehen, einen individuellen Charakter und spezielle Bedürfnisse aus.
        Bevor Sie in die riesige Welt der Hunderassen eintauchen, erfahren Sie hier mehr über ihre Besonderheiten und Entstehung.</string>
    <string name="email" translatable="false">email</string>
    <string name="password" translatable="false">password</string>
    <string name="cancel" translatable="false" tools:ignore="ButtonCase">cancel</string>
    <string name="login" translatable="false">Login</string>
    <string name="sign_up" translatable="false">Sign Up</string>
    <string name="tvhistory_detail" translatable="false">tvHistory_Detail</string>
</resources>