<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:ignore="@string/app_name">
    
    <data>
    
    </data>
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Detail_Fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#6E6EF3"
        android:tag="layout/fragment_detail">
    
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/materialToolbar"
            android:layout_width="396dp"
            android:layout_height="61dp"
            android:background="#6E6EF3"
            android:minHeight="?android:attr/actionBarSize"
            android:theme="@style/Theme.AndroidAppTemplate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    
        <TextView
            android:id="@+id/tvDogName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dogName81"
            android:textAlignment="center"
            android:textColor="@color/material_dynamic_neutral99"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="@+id/materialToolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/dogName83" />
    
        <ImageView
            android:id="@+id/ivDogs_Detail"
            android:layout_width="397dp"
            android:layout_height="265dp"
            android:layout_marginTop="10dp"
            android:background="@color/ic_launcher_my_perfect_dog_background"
            android:contentDescription="@string/dogName83"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/materialToolbar"
            app:layout_constraintStart_toStartOf="@+id/materialToolbar"
            app:layout_constraintTop_toBottomOf="@+id/materialToolbar"
            app:srcCompat="@drawable/deutscher_sch_ferhund"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@drawable/deutscher_sch_ferhund" />
    
        <TextView
            android:id="@+id/tvHistory_Detail"
            android:layout_width="392dp"
            android:layout_height="574dp"
            android:layout_marginTop="8dp"
            android:text="@string/tvhistory_detail"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/material_dynamic_neutral99"
            android:textColorLink="@color/white"
            android:textSize="20sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="@+id/ivDogs_Detail"
            app:layout_constraintHorizontal_bias="0.571"
            app:layout_constraintStart_toStartOf="@+id/ivDogs_Detail"
            app:layout_constraintTop_toBottomOf="@+id/ivDogs_Detail" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>