<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:tag="layout/fragment_signup"
    android:textAlignment="gravity"
    android:textDirection="anyRtl"
    tools:background="#6E6EF3">
    
    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="232dp"
        android:layout_height="71dp"
        android:layout_margin="100dp"
        android:layout_marginTop="64dp"
        android:singleLine="true"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textIsSelectable="false"
        android:textSize="48sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintHorizontal_bias="0.498" />
    
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/signup_mail"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="text"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/tv_sign_up"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/tv_sign_up"
        app:layout_constraintTop_toBottomOf="@+id/tv_sign_up"
        app:textInputLayoutFocusedRectEnabled="false" />
    
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/signup_password"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textVisiblePassword|textPassword"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/signup_mail"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/signup_mail"
        app:layout_constraintTop_toBottomOf="@+id/signup_mail" />
    
    <Button
        android:id="@+id/signup_signup_button"
        android:layout_width="95dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:background="#BAE5E1E1"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="sans-serif-condensed"
        android:foregroundTint="#000000"
        android:labelFor="@id/iv_signup"
        android:text="@string/sign_up"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="@+id/signup_password"
        app:layout_constraintStart_toEndOf="@+id/signup_cancel_button"
        app:layout_constraintTop_toBottomOf="@+id/signup_password"
        tools:ignore="DuplicateSpeakableTextCheck" />
    
    <Button
        android:id="@+id/signup_cancel_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="95dp"
        android:layout_height="50dp"
        android:background="#BAE5E1E1"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="sans-serif-condensed"
        android:text="@android:string/cancel"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="@+id/signup_password"
        app:layout_constraintTop_toTopOf="@+id/signup_signup_button" />
    
    <ImageView
        android:id="@+id/iv_signup"
        android:layout_width="357dp"
        android:layout_height="236dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/dogName182"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/signup_signup_button"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/signup_cancel_button"
        app:layout_constraintTop_toBottomOf="@+id/signup_signup_button"
        app:layout_constraintVertical_bias="0.554"
        app:srcCompat="@drawable/pharaonenhund"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>